--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="author-content">
             <div class="author-card">
                 <div class="author-photo">
-                    <img src="author-photo.jpg" alt="Alex Johnson - Founder & Lead Designer" />
+                    <img src="author-photo.webp" alt="Alex Johnson - Founder & Lead Designer" />
                 </div>
                 <div class="author-info">
                     <h2>Meet the Creator</h2>
