--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         <div class="author-content">
             <div class="author-card">
                 <div class="author-photo">
-                    <img src="author-photo.webp" alt="Alex Johnson - Founder & Lead Designer" />
+                    <img src="author-photo.webp" alt="Furqaan Khazi" />
                 </div>
                 <div class="author-info">
                     <h2>Meet the Creator</h2>
-                    <h3>Alex Johnson</h3>
+                    <h3>Furqaan Khazi</h3>
                     <p class="author-title">Founder & Lead Designer</p>
                     <p class="author-bio">
                         With over 8 years of experience in UI/UX design and mobile security, Alex founded Creative Pattern Locks to bridge the gap between security and aesthetics. A graduate of MIT with a degree in Computer Science, Alex has worked with leading tech companies before pursuing the passion for creating beautiful, secure pattern designs.
