--- a/index.html
+++ b/index.html
@@ -139,23 +139,23 @@
                     <h3>Furqaan Khazi</h3>
                     <p class="author-title">Founder & Lead Designer</p>
                     <p class="author-bio">
-                        With over 8 years of experience in UI/UX design and mobile security, Alex founded Creative Pattern Locks to bridge the gap between security and aesthetics. A graduate of MIT with a degree in Computer Science, Alex has worked with leading tech companies before pursuing the passion for creating beautiful, secure pattern designs.
+                        With over 5 years of experience in Webiste Development & Google SEO, I founded "All Pattern Lock" to bridge the gap between security and aesthetics.
                     </p>
                     <p class="author-bio">
-                        When not designing new patterns, Alex enjoys photography, digital art, and exploring the latest trends in mobile interface design. The mission is simple: make security beautiful and accessible for everyone.
+                        When not designing new patterns, I enjoy Graphic Designing, digital art, and exploring the latest trends. The mission is simple: make security beautiful and accessible for everyone.
                     </p>
                     <div class="author-credentials">
                         <div class="credential">
                             <span class="credential-icon">🎓</span>
-                            <span>MIT Computer Science</span>
+                            <span>BE (CSE)</span>
                         </div>
                         <div class="credential">
                             <span class="credential-icon">💼</span>
-                            <span>8+ Years Experience</span>
+                            <span>5+ Years Experience</span>
                         </div>
                         <div class="credential">
                             <span class="credential-icon">🏆</span>
-                            <span>UI/UX Design Expert</span>
+                            <span>Full Stack Developer</span>
                         </div>
                     </div>
                 </div>
