--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.webp">
 </head>
 <body>
 
@@ -176,17 +177,16 @@
                     <li><a href="#patterns">Patterns</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#author">Author</a></li>
-                    
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>Email: info@creativepatternlocks.com</p>
+                <p>Email: info.allpatternlock@gmail.com</p>
                 <p>Follow us for updates and new patterns!</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Creative Pattern Locks. All rights reserved.</p>
+            <p>&copy; All Pattern Lock. All rights reserved.</p>
         </div>
     </footer>
 
