--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <h1>🔐 Creative Pattern Locks</h1>
+                <h1>🔐 All Pattern Lock</h1>
             </div>
             <nav>
                 <ul>
