--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h2>Discover Unique Pattern Locks</h2>
-            <p>Explore our collection of 50+ creative and visually stunning pattern locks with smooth looped animations. Updated weekly with new designs!</p>
+            <p>Explore our vast collection creative and visually stunning pattern locks with smooth looped animations. Updated weekly with new designs!</p>
             <a href="#patterns" class="cta-button">Explore Patterns</a>
         </div>
         <div class="hero-animation">
